--- a/styles.css
+++ b/styles.css
@@ -12,5 +12,30 @@ div {
   padding: 10px;
   display: flex;
   justify-content: space-between;
-  width: 25vw;
+  width: 27vw;
+}
+
+input {
+  border-radius: 10px;
+  width: 10vw;
+  margin-left: 5px;
+}
+
+.signUpButton {
+  width: 7vw;
+  height: 3vh;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 10vw;
+  margin-top: 40px;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+}
+
+.signUpButton:hover {
+  background-color: white;
+  color: black;
 }
